index,about,institute,contact page done

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -291,6 +291,7 @@
   }
   .single-graduates-card {
     padding: 30px 20px;
+    margin: 10px;
   }
   .single-graduates-card h3 {
     font-size: 15px;
