--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -412,6 +412,7 @@
     }
     .single-graduates-card {
         padding: 30px 20px;
+        margin: 10px;
 
         h3 {
             font-size: 15px;
@@ -2147,6 +2148,7 @@
     }
     .single-graduates-card {
         padding: 30px;
+        margin: 10px;
     }
 
     // Apply Area
@@ -3371,6 +3373,7 @@
     // Graduates Area
     .single-graduates-card {
         padding: 20px;
+        margin: 10px;
 
         h3 {
             font-size: 16px;
@@ -4125,6 +4128,7 @@
     // Graduates Area
     .single-graduates-card {
         padding: 45px 30px;
+        margin: 10px;
     }
 
     // Student Area
